SYNFIG = synfig

EXT = @imageext@


EXTRA_DIST = \
	installer_logo.sif \
	installer_logo_osx.sif \
	splash_screen-0.63.03.sif \
	splash_screen-0.63.02.sif \
	splash_screen-0.63.01.sif \
	splash_screen-0.63.00.sif \
	splash_screen-0.63.sif \
	splash_screen-0.62.02.sif \
	splash_screen-0.62.01.sif \
	splash_screen-0.62.01-2.sif \
	splash_screen-0.62.00.sif \
	splash_screen-0.61.09.sif \
	splash_screen-0.61.08.sif \
	splash_screen-0.61.07.sif \
	splash_screen_development.sif.in \
	about_icon.sif \
	animate_mode_icons.sif \
	clear_redo_icon.sif \
	clear_undo_icon.sif \
	curves_icon.sif \
	duplicate_icon.sif \
	encapsulate_icon.sif \
	keyframe_lock_icons.sif \
	framedial_icons.sif \
	logo.sif \
	pastecanvas_icon.sif \
	saveall_icon.sif \
	select_all_child_layers_icon.sif \
	sif_icon.sif \
	reset_colors_icon.sif \
	swap_colors_icon.sif \
	synfig_icon.sif \
	synfig_icon.svg \
	valuenode_icon.sif \
	wallpaper.sif \
	rename_icon.sif \
	plant_icon.sif \
	set_fill_color.sif \
	set_outline_color.sif \
	duck_position_icon.sif \
	duck_vertex_icon.sif \
	duck_tangent_icon.sif \
	duck_radius_icon.sif \
	duck_width_icon.sif \
	duck_angle_icon.sif \
	show_grid_icon.sif \
	snap_grid_icon.sif \
	onion_skin_icon.sif \
	incr_resolution_icon.sif \
	decr_resolution_icon.sif \
	render_options_icon.sif \
	preview_options_icon.sif \
	action_set_layer_description_icon.sif \
	action_add_to_group_icon.sif \
	action_remove_from_group_icon.sif \
	action_export_icon.sif \
	action_unexport_icon.sif \
	action_flat_interpolation_icon.sif \
	action_interpolate_interpolation_icon.sif \
	action_peak_interpolation_icon.sif \
	action_rounded_interpolation_icon.sif \
	action_squared_interpolation_icon.sif \
	\
	interpolation_type_tcb_icon.sif\
	interpolation_type_ease_icon.sif\
	interpolation_type_const_icon.sif\
	interpolation_type_linear_icon.sif\
	\
	layer_blur_blur_icon.sif \
	layer_blur_motion_icon.sif \
	layer_blur_radial_icon.sif \
	layer_distortion_curvewarp_icon.sif \
	layer_distortion_insideout_icon.sif \
	layer_distortion_noise_icon.sif \
	layer_distortion_spherize_icon.sif \
	layer_distortion_stretch_icon.sif \
	layer_distortion_twirl_icon.sif \
	layer_distortion_warp_icon.sif \
	layer_example_filledrectangle_icon.sif \
	layer_example_metaballs_icon.sif \
	layer_example_simplecircle_icon.sif \
	layer_filter_clamp_icon.sif \
	layer_filter_colorcorrect_icon.sif \
	layer_filter_halftone2_icon.sif \
	layer_filter_halftone3_icon.sif \
	layer_filter_lumakey_icon.sif \
	layer_fractal_julia_icon.sif \
	layer_fractal_mandelbrot_icon.sif \
	layer_geometry_checkerboard_icon.sif \
	layer_geometry_circle_icon.sif \
	layer_geometry_outline_icon.sif \
	layer_geometry_advanced_outline_icon.sif \
	layer_geometry_polygon_icon.sif \
	layer_geometry_rectangle_icon.sif \
	layer_geometry_region_icon.sif \
	layer_geometry_solidcolor_icon.sif \
	layer_geometry_star_icon.sif \
	layer_gradient_conical_icon.sif \
	layer_gradient_curve_icon.sif \
	layer_gradient_lineal_icon.sif \
	layer_gradient_noise_icon.sif \
	layer_gradient_radial_icon.sif \
	layer_gradient_spiral_icon.sif \
	layer_other_duplicate_icon.sif \
	layer_other_importimage_icon.sif \
	layer_other_pastecanvas_icon.sif \
	layer_other_plant_icon.sif \
	layer_other_supersample_icon.sif \
	layer_other_text_icon.sif \
	layer_other_timeloop_icon.sif \
	layer_other_xorpattern_icon.sif \
	layer_stylize_bevel_icon.sif \
	layer_stylize_shade_icon.sif \
	layer_transform_rotate_icon.sif \
	layer_transform_translate_icon.sif \
	layer_transform_zoom_icon.sif \
	\
	tool_bline_icon.sif \
	tool_circle_icon.sif \
	tool_draw_icon.sif \
	tool_eyedrop_icon.sif \
	tool_fill_icon.sif \
	tool_gradient_icon.sif \
	tool_mirror_icon.sif \
	tool_normal_icon.sif \
	tool_polyline_icon.sif \
	tool_rectangle_icon.sif \
	tool_rotate_icon.sif \
	tool_scale_icon.sif \
	tool_sketch_icon.sif \
	tool_smooth_move_icon.sif \
	tool_star_icon.sif \
	tool_text_icon.sif \
	tool_width_icon.sif \
	tool_zoom_icon.sif \
	\
	type_angle_icon.sif \
	type_blinepoint_icon.sif \
	type_bool_icon.sif \
	type_canvas_icon.sif \
	type_color_icon.sif \
	type_gradient_icon.sif \
	type_integer_icon.sif \
	type_list_icon.sif \
	type_real_icon.sif \
	type_segment_icon.sif \
	type_string_icon.sif \
	type_time_icon.sif \
	type_vector_icon.sif \
	\
	canvas_icon.sif \
	children_icon.sif \
	curves_icon.sif \
	group_icon.sif \
	history_icon.sif \
	info_icon.sif \
	keyframe_icon.sif \
	layer_icon.sif \
	meta_data_icon.sif \
	navigator_icon.sif \
	palette_icon.sif \
	params_icon.sif \
	time_track_icon.sif

IMAGES = \
	installer_logo.$(EXT) \
	installer_logo_osx.$(EXT) \
	pastecanvas_icon.$(EXT) \
	clear_redo_icon.$(EXT) \
	clear_undo_icon.$(EXT) \
	reset_colors_icon.$(EXT) \
	swap_colors_icon.$(EXT) \
	select_all_child_layers_icon.$(EXT) \
	sif_icon.$(EXT) \
	synfig_icon.$(EXT) \
	saveall_icon.$(EXT) \
	about_icon.$(EXT) \
	splash_screen.$(EXT) \
	valuenode_icon.$(EXT) \
	duplicate_icon.$(EXT) \
	encapsulate_icon.$(EXT) \
	\
	keyframe_lock_past_on_icon.$(EXT) \
	keyframe_lock_past_off_icon.$(EXT) \
	keyframe_lock_future_on_icon.$(EXT) \
	keyframe_lock_future_off_icon.$(EXT) \
	\
	animate_seek_next_keyframe_icon.$(EXT) \
	animate_seek_prev_keyframe_icon.$(EXT) \
	animate_seek_next_frame_icon.$(EXT) \
	animate_seek_prev_frame_icon.$(EXT) \
	animate_seek_begin_icon.$(EXT) \
	animate_seek_end_icon.$(EXT) \
	animate_play_icon.$(EXT) \
	animate_stop_icon.$(EXT) \
	animate_pause_icon.$(EXT) \
	animate_loop_icon.$(EXT) \
	animate_mode_off_icon.$(EXT) \
	animate_mode_on_icon.$(EXT) \
	\
	rename_icon.$(EXT) \
	plant_icon.$(EXT) \
	set_fill_color.$(EXT) \
	set_outline_color.$(EXT) \
	duck_position_icon.$(EXT) \
	duck_vertex_icon.$(EXT) \
	duck_tangent_icon.$(EXT) \
	duck_radius_icon.$(EXT) \
	duck_width_icon.$(EXT) \
	duck_angle_icon.$(EXT) \
	show_grid_icon.$(EXT) \
	snap_grid_icon.$(EXT) \
	onion_skin_icon.$(EXT) \
	incr_resolution_icon.$(EXT) \
	decr_resolution_icon.$(EXT) \
	render_options_icon.$(EXT) \
	preview_options_icon.$(EXT) \
	action_set_layer_description_icon.$(EXT) \
	action_add_to_group_icon.$(EXT) \
	action_remove_from_group_icon.$(EXT) \
	action_export_icon.$(EXT) \
	action_unexport_icon.$(EXT) \
	action_flat_interpolation_icon.$(EXT) \
	action_interpolate_interpolation_icon.$(EXT) \
	action_peak_interpolation_icon.$(EXT) \
	action_rounded_interpolation_icon.$(EXT) \
	action_squared_interpolation_icon.$(EXT) \
	\
	interpolation_type_tcb_icon.$(EXT)\
	interpolation_type_ease_icon.$(EXT)\
	interpolation_type_const_icon.$(EXT)\
	interpolation_type_linear_icon.$(EXT)\
	\
	layer_blur_blur_icon.$(EXT) \
	layer_blur_motion_icon.$(EXT) \
	layer_blur_radial_icon.$(EXT) \
	layer_distortion_curvewarp_icon.$(EXT) \
	layer_distortion_insideout_icon.$(EXT) \
	layer_distortion_noise_icon.$(EXT) \
	layer_distortion_spherize_icon.$(EXT) \
	layer_distortion_stretch_icon.$(EXT) \
	layer_distortion_twirl_icon.$(EXT) \
	layer_distortion_warp_icon.$(EXT) \
	layer_example_filledrectangle_icon.$(EXT) \
	layer_example_metaballs_icon.$(EXT) \
	layer_example_simplecircle_icon.$(EXT) \
	layer_filter_clamp_icon.$(EXT) \
	layer_filter_colorcorrect_icon.$(EXT) \
	layer_filter_halftone2_icon.$(EXT) \
	layer_filter_halftone3_icon.$(EXT) \
	layer_filter_lumakey_icon.$(EXT) \
	layer_fractal_julia_icon.$(EXT) \
	layer_fractal_mandelbrot_icon.$(EXT) \
	layer_geometry_checkerboard_icon.$(EXT) \
	layer_geometry_circle_icon.$(EXT) \
	layer_geometry_outline_icon.$(EXT) \
	layer_geometry_advanced_outline_icon.$(EXT) \
	layer_geometry_polygon_icon.$(EXT) \
	layer_geometry_rectangle_icon.$(EXT) \
	layer_geometry_region_icon.$(EXT) \
	layer_geometry_solidcolor_icon.$(EXT) \
	layer_geometry_star_icon.$(EXT) \
	layer_gradient_conical_icon.$(EXT) \
	layer_gradient_curve_icon.$(EXT) \
	layer_gradient_lineal_icon.$(EXT) \
	layer_gradient_noise_icon.$(EXT) \
	layer_gradient_radial_icon.$(EXT) \
	layer_gradient_spiral_icon.$(EXT) \
	layer_other_duplicate_icon.$(EXT) \
	layer_other_importimage_icon.$(EXT) \
	layer_other_pastecanvas_icon.$(EXT) \
	layer_other_plant_icon.$(EXT) \
	layer_other_supersample_icon.$(EXT) \
	layer_other_text_icon.$(EXT) \
	layer_other_timeloop_icon.$(EXT) \
	layer_other_xorpattern_icon.$(EXT) \
	layer_stylize_bevel_icon.$(EXT) \
	layer_stylize_shade_icon.$(EXT) \
	layer_transform_rotate_icon.$(EXT) \
	layer_transform_translate_icon.$(EXT) \
	layer_transform_zoom_icon.$(EXT) \
	\
	tool_bline_icon.$(EXT) \
	tool_circle_icon.$(EXT) \
	tool_draw_icon.$(EXT) \
	tool_eyedrop_icon.$(EXT) \
	tool_fill_icon.$(EXT) \
	tool_gradient_icon.$(EXT) \
	tool_mirror_icon.$(EXT) \
	tool_normal_icon.$(EXT) \
	tool_polyline_icon.$(EXT) \
	tool_rectangle_icon.$(EXT) \
	tool_rotate_icon.$(EXT) \
	tool_scale_icon.$(EXT) \
	tool_sketch_icon.$(EXT) \
	tool_smooth_move_icon.$(EXT) \
	tool_star_icon.$(EXT) \
	tool_text_icon.$(EXT) \
	tool_width_icon.$(EXT) \
	tool_zoom_icon.$(EXT) \
	\
	type_angle_icon.$(EXT) \
	type_blinepoint_icon.$(EXT) \
	type_bool_icon.$(EXT) \
	type_canvas_icon.$(EXT) \
	type_color_icon.$(EXT) \
	type_gradient_icon.$(EXT) \
	type_integer_icon.$(EXT) \
	type_list_icon.$(EXT) \
	type_real_icon.$(EXT) \
	type_segment_icon.$(EXT) \
	type_string_icon.$(EXT) \
	type_time_icon.$(EXT) \
	type_vector_icon.$(EXT) \
	\
	canvas_icon.$(EXT) \
	children_icon.$(EXT) \
	curves_icon.$(EXT) \
	group_icon.$(EXT) \
	history_icon.$(EXT) \
	info_icon.$(EXT) \
	keyframe_icon.$(EXT) \
	layer_icon.$(EXT) \
	meta_data_icon.$(EXT) \
	navigator_icon.$(EXT) \
	palette_icon.$(EXT) \
	params_icon.$(EXT) \
	time_track_icon.$(EXT)

MAINTAINERCLEANFILES = \
	Makefile.in


CLEANFILES = \
	$(IMAGES) \
	images.nsh \
	unimages.nsh \
	installer_logo.bmp \
	sif_icon.ico \
	synfig_icon.ico \
	icons.nsh \
	unicons.nsh

CLEANDIRS = \
	16x16 \
	22x22 \
	24x24 \
	32x32 \
	48x48 \
	64x64 \
	128x128 \
	256x256

image_DATA = $(IMAGES)


all: $(IMAGES)

SUFFIXES = .sif .tif .png

#.SUFFIXES: $(SUFFIXES)

PNGTOICO = png2ico

.sif.ico:
	$(SYNFIG) $< -w 16 -h 16 -o $*-16x16.png $< -w 32 -h 32 -o $*-32x32.png $< -w 48 -h 48 -o $*-48x48.png $< -w 64 -h 64 -o $*-64x64.png
	cp -f `which $(PNGTOICO)`.* ./
	$(PNGTOICO) $@ $*-16x16.png $*-32x32.png $*-48x48.png $*-64x64.png
	rm -f ./$(PNGTOICO).* $*-16x16.png $*-32x32.png $*-48x48.png $*-64x64.png
	echo "  File \"images\\$@\"" >>./icons.nsh
	echo "  Delete \"\$$INSTDIR\\share\\pixmaps\\$@\"" >>./unicons.nsh

clean-local:
	$(RM) -r $(CLEANDIRS)

.sif.bmp:
	$(SYNFIG) -q $< -o $@ --time 0

.sif.$(EXT):
	$(SYNFIG) -q $< -o $@ --time 0
	echo "  File \"images\\$@\"" >>./images.nsh
	echo "  Delete \"\$$INSTDIR\\share\\pixmaps\\$@\"" >>./unimages.nsh

.sifz.$(EXT):
	$(SYNFIG) -q $< -o $@ --time 0
	echo "  File \"images\\$@\"" >>./images.nsh
	echo "  Delete \"\$$INSTDIR\\share\\pixmaps\\$@\"" >>./unimages.nsh

keyframe_lock_past_on_icon.$(EXT): $(srcdir)/keyframe_lock_icons.sif
	$(SYNFIG) -q $< -o $@ --time 0
	echo "  File \"images\\$@\"" >>./images.nsh
	echo "  Delete \"\$$INSTDIR\\share\\pixmaps\\$@\"" >>./unimages.nsh

keyframe_lock_past_off_icon.$(EXT): $(srcdir)/keyframe_lock_icons.sif
	$(SYNFIG) -q $< -o $@ --time 1
	echo "  File \"images\\$@\"" >>./images.nsh
	echo "  Delete \"\$$INSTDIR\\share\\pixmaps\\$@\"" >>./unimages.nsh

keyframe_lock_future_on_icon.$(EXT): $(srcdir)/keyframe_lock_icons.sif
	$(SYNFIG) -q $< -o $@ --time 2
	echo "  File \"images\\$@\"" >>./images.nsh
	echo "  Delete \"\$$INSTDIR\\share\\pixmaps\\$@\"" >>./unimages.nsh

keyframe_lock_future_off_icon.$(EXT): $(srcdir)/keyframe_lock_icons.sif
	$(SYNFIG) -q $< -o $@ --time 3
	echo "  File \"images\\$@\"" >>./images.nsh
	echo "  Delete \"\$$INSTDIR\\share\\pixmaps\\$@\"" >>./unimages.nsh

animate_seek_next_keyframe_icon.$(EXT): $(srcdir)/framedial_icons.sif
	$(SYNFIG) -q $< -o $@ --time 0
	echo " File \"images\\$@\"" >>./images.nsh
	echo " Delete \"\$$INSTDIR\\share\\pixmaps\\$@\"" >>./unimages.nsh

animate_seek_prev_keyframe_icon.$(EXT): $(srcdir)/framedial_icons.sif
	$(SYNFIG) -q $< -o $@ --time 1
	echo " File \"images\\$@\"" >>./images.nsh
	echo " Delete \"\$$INSTDIR\\share\\pixmaps\\$@\"" >>./unimages.nsh

animate_seek_next_frame_icon.$(EXT): $(srcdir)/framedial_icons.sif
	$(SYNFIG) -q $< -o $@ --time 2
	echo " File \"images\\$@\"" >>./images.nsh
	echo " Delete \"\$$INSTDIR\\share\\pixmaps\\$@\"" >>./unimages.nsh

animate_seek_prev_frame_icon.$(EXT): $(srcdir)/framedial_icons.sif
	$(SYNFIG) -q $< -o $@ --time 3
	echo " File \"images\\$@\"" >>./images.nsh
	echo " Delete \"\$$INSTDIR\\share\\pixmaps\\$@\"" >>./unimages.nsh

animate_seek_begin_icon.$(EXT): $(srcdir)/framedial_icons.sif
	$(SYNFIG) -q $< -o $@ --time 4
	echo " File \"images\\$@\"" >>./images.nsh
	echo " Delete \"\$$INSTDIR\\share\\pixmaps\\$@\"" >>./unimages.nsh

animate_seek_end_icon.$(EXT): $(srcdir)/framedial_icons.sif
	$(SYNFIG) -q $< -o $@ --time 5
	echo " File \"images\\$@\"" >>./images.nsh
	echo " Delete \"\$$INSTDIR\\share\\pixmaps\\$@\"" >>./unimages.nsh

animate_play_icon.$(EXT): $(srcdir)/framedial_icons.sif
	$(SYNFIG) -q $< -o $@ --time 6
	echo " File \"images\\$@\"" >>./images.nsh
	echo " Delete \"\$$INSTDIR\\share\\pixmaps\\$@\"" >>./unimages.nsh

animate_stop_icon.$(EXT): $(srcdir)/framedial_icons.sif
	$(SYNFIG) -q $< -o $@ --time 7
	echo " File \"images\\$@\"" >>./images.nsh
	echo " Delete \"\$$INSTDIR\\share\\pixmaps\\$@\"" >>./unimages.nsh

animate_pause_icon.$(EXT): $(srcdir)/framedial_icons.sif
	$(SYNFIG) -q $< -o $@ --time 8
	echo " File \"images\\$@\"" >>./images.nsh
	echo " Delete \"\$$INSTDIR\\share\\pixmaps\\$@\"" >>./unimages.nsh

animate_loop_icon.$(EXT): $(srcdir)/framedial_icons.sif
	$(SYNFIG) -q $< -o $@ --time 9
	echo " File \"images\\$@\"" >>./images.nsh
	echo " Delete \"\$$INSTDIR\\share\\pixmaps\\$@\"" >>./unimages.nsh


animate_mode_off_icon.$(EXT): $(srcdir)/animate_mode_icons.sif
	$(SYNFIG) -q $< -o $@ --time 0
	echo " File \"images\\$@\"" >>./images.nsh
	echo " Delete \"\$$INSTDIR\\share\\pixmaps\\$@\"" >>./unimages.nsh

animate_mode_on_icon.$(EXT): $(srcdir)/animate_mode_icons.sif
	$(SYNFIG) -q $< -o $@ --time 1
	echo " File \"images\\$@\"" >>./images.nsh
	echo " Delete \"\$$INSTDIR\\share\\pixmaps\\$@\"" >>./unimages.nsh

if DEVELOPMENT_SNAPSHOT
splash_screen_development.sif: $(srcdir)/splash_screen_development.sif.in
	export commit_id=`git log --no-color -1 | head -n 1 | cut -f 2 -d ' ' | cut -c -6` && \
	export commit_date=`git show --pretty=format:%ci HEAD |  head -c 10` && \
	export branch=`git branch -a --no-color --contains HEAD | sed -e s/\*\ // | sed -e s/\(no\ branch\)// | tr '\n' ' ' | tr -s ' ' | sed s/^' '//` && \
	export branch=`echo $$branch | egrep origin/master > /dev/null && echo master || echo $$branch | cut -d ' ' -f 1 | sed -e 's/.*\///'` && \
	sed "s|%branch%|$$branch|" $< | sed "s|%commit_date%|$$commit_date|" | sed "s|%commit_id%|$$commit_id|" | sed "s|synfig_icon.sif#|$(srcdir)/synfig_icon.sif#|" > $@
splash_screen.$(EXT): splash_screen_development.sif
	$(SYNFIG) -q $< -o $@ --time 0
	echo "  File \"images\\$@\"" >>./images.nsh
	echo "  Delete \"\$$INSTDIR\\share\\pixmaps\\$@\"" >>./unimages.nsh
.PHONY: splash_screen_development.sif
else
splash_screen.$(EXT): $(srcdir)/splash_screen-$(PACKAGE_VERSION).sif
	$(SYNFIG) -q $< -o $@ --time 0
	echo "  File \"images\\$@\"" >>./images.nsh
	echo "  Delete \"\$$INSTDIR\\share\\pixmaps\\$@\"" >>./unimages.nsh
endif

if !WIN32_PKG
if !MACOSX_PKG

16x16/synfig_icon.$(EXT): synfig_icon.sif
	-mkdir 16x16
	$(SYNFIG) -q $< -o $@ --time 0 -w 16 -h 16

icons16dir = $(datadir)/icons/hicolor/16x16/apps
icons16_DATA = 16x16/synfig_icon.$(EXT)

22x22/synfig_icon.$(EXT): synfig_icon.sif
	-mkdir 22x22
	$(SYNFIG) -q $< -o $@ --time 0 -w 22 -h 22

icons22dir = $(datadir)/icons/hicolor/22x22/apps
icons22_DATA = 22x22/synfig_icon.$(EXT)

24x24/synfig_icon.$(EXT): synfig_icon.sif
	-mkdir 24x24
	$(SYNFIG) -q $< -o $@ --time 0 -w 24 -h 24

icons24dir = $(datadir)/icons/hicolor/24x24/apps
icons24_DATA = 24x24/synfig_icon.$(EXT)

32x32/synfig_icon.$(EXT): synfig_icon.sif
	-mkdir 32x32
	$(SYNFIG) -q $< -o $@ --time 0 -w 32 -h 32

icons32dir = $(datadir)/icons/hicolor/32x32/apps
icons32_DATA = 32x32/synfig_icon.$(EXT)

48x48/synfig_icon.$(EXT): synfig_icon.sif
	-mkdir 48x48
	$(SYNFIG) -q $< -o $@ --time 0 -w 48 -h 48

icons48dir = $(datadir)/icons/hicolor/48x48/apps
icons48_DATA = 48x48/synfig_icon.$(EXT)

64x64/synfig_icon.$(EXT): synfig_icon.sif
	-mkdir 64x64
	$(SYNFIG) -q $< -o $@ --time 0 -w 64 -h 64

icons64dir = $(datadir)/icons/hicolor/64x64/apps
icons64_DATA = 64x64/synfig_icon.$(EXT)

128x128/synfig_icon.$(EXT): synfig_icon.sif
	-mkdir 128x128
	$(SYNFIG) -q $< -o $@ --time 0 -w 128 -h 128

icons128dir = $(datadir)/icons/hicolor/128x128/apps
icons128_DATA = 128x128/synfig_icon.$(EXT)

256x256/synfig_icon.$(EXT): synfig_icon.sif
	-mkdir 256x256
	$(SYNFIG) -q $< -o $@ --time 0 -w 256 -h 256

+icons256dir = $(datadir)/icons/hicolor/256x256/apps
+icons256_DATA = 256x256/synfig_icon.$(EXT)

iconsscalabledir = $(datadir)/icons/hicolor/scalable/apps
iconsscalable_DATA = synfig_icon.svg

endif
endif
