# $Id$

MAINTAINERCLEANFILES = Makefile.in

EXTRA_DIST = \
	brushlib/__init__.py \
	brushlib/brush.hpp \
	brushlib/brushlib.hpp \
	brushlib/brushsettings.hpp \
	brushlib/brushsettings.py \
	brushlib/generate.py \
	brushlib/helpers.hpp \
	brushlib/mapping.hpp \
	brushlib/README \
	brushlib/SConscript \
	brushlib/surface.hpp \
	brushlib.h \
	template.cpp \
	template.h \
	languages.inc.c

SUBDIRS = \
	synfigapp \
	gui \
	player

